@@ -19,6 +19,10 @@ void       theme_thumbnail_invalidate_cache (GnomeThemeMetaInfo *meta_theme_info
 void       theme_thumbnail_factory_init     (int                 argc,
 					     char               *argv[]);
 
+/* Functions for specific types of themes */
+GdkPixbuf *generate_gtk_theme_thumbnail      (GnomeThemeInfo *theme_info);
+GdkPixbuf *generate_metacity_theme_thumbnail (GnomeThemeInfo *theme_info);
+GdkPixbuf *generate_icon_theme_thumbnail     (GnomeThemeIconInfo *theme_info);
 
 
 #endif /* __THEME_THUMBNAIL_H__ */
