@@ -1,3 +1,9 @@
+2007-05-25  Denis Washington  <denisw@svn.gnome.org>
+
+	* theme-thumbnail.[ch]:
+	Add functions to generate thumbnails for specific types of themes, for
+	instance a metacity theme thumbnail.
+
 2007-05-24  Denis Washington  <denisw@svn.gnome.org>
 
 	* gconf-property-editor.c: (peditor_tree_view_widget_changed):
